crates/snapshots/snapshots/cli_snapshots__safety__safety_explicit_gitignored_target.snap
---
source: crates/snapshots/tests/cli_snapshots/safety.rs
expression: document
---
case: safety_explicit_gitignored_target

--- step: automatic discovery ---
status: 0
stdout: "--- a/Button.module.css\n+++ b/Button.module.css\n@@ -1,1 +0,0 @@\n-.button { padding: 13px; }\n--- a/Button.tsx\n+++ b/Button.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Button.module.css';\n-export const Button = () => <button className={styles.button}>Save</button>;\n+export const Button = () => <button className=\"p-[13px]\">Save</button>;\nPreviewed 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged

--- step: explicit ignored target ---
status: 0
stdout: "--- a/Ignored.module.css\n+++ b/Ignored.module.css\n@@ -1,1 +0,0 @@\n-.ignored { display: grid; }\n--- a/Ignored.tsx\n+++ b/Ignored.tsx\n@@ -1,2 +1,1 @@\n-import styles from './Ignored.module.css';\n-export const Ignored = () => <div className={styles.ignored} />;\n+export const Ignored = () => <div className=\"grid\" />;\nPreviewed 2 file(s); 1 rule(s) converted, 0 retained.\n"
stderr: ""
workspace delta:
  unchanged
