crates/snapshots/snapshots/cli_snapshots__safety__safety_force_workspace_skip.snap
---
source: crates/snapshots/tests/cli_snapshots/safety.rs
expression: document
---
case: safety_force_workspace_skip

--- step: without force ---
status: 1
stdout: ""
stderr: "tw-migrate: TW_MIGRATE_RECOVERABLE_INPUT:Failed to parse [WORKSPACE]/broken/Broken.module.css: Error { kind: Unexpected(\"<eof>\", \"}\"), span: Span { start: 0, end: 1 } }\n"
workspace delta:
  unchanged

--- step: with force ---
status: 0
stdout: "--- a/good/Good.tsx\n+++ b/good/Good.tsx\n@@ -1,2 +1,2 @@\n import styles from './Good.module.css';\n-export const Good = () => <div className={styles.good} />;\n+export const Good = () => <div className=\"grid\" />;\nApplied 1 file(s); 0 rule(s) converted, 1 retained.\n"
stderr: "warning[unsupported-css-module-reference] broken/Broken.module.css Another stylesheet references the CSS Module, so it is retained.\nwarning[unresolved-selector-target] good/Good.module.css:1:1-1:25 No exclusively supported className references were found.\nskipped[broken] Failed to parse [WORKSPACE]/broken/Broken.module.css: Error { kind: Unexpected(\"<eof>\", \"}\"), span: Span { start: 0, end: 1 } }\n"
workspace delta:
  modified good/Good.tsx
    before: "import styles from './Good.module.css';\nexport const Good = () => <div className={styles.good} />;\n"
    after: "import styles from './Good.module.css';\nexport const Good = () => <div className=\"grid\" />;\n"
